objects/archive_contact_info__b.object
<CustomObject>
    <description>This will hold archived contact into</description>
    <label>archive_contact_info</label>
    <pluralLabel>archive_contact_info</pluralLabel>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>archive_contact_info</relationshipLabel>
        <relationshipName>archive_contact_info</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>archive_contact_info</relationshipLabel>
        <relationshipName>archive_contact_info</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fxAutoId__c</fullName>
        <label>fxAutoId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateCreated__c</fullName>
        <label>dateCreated</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
</CustomObject>